--- a/app/views/layouts/dash_board/_header.html.erb
+++ b/app/views/layouts/dash_board/_header.html.erb
@@ -7,10 +7,10 @@
 			<div class="row">
 				<div class="col-md-3">
 				</div>
-				<div class="col-md-12">
+				<div class="col-md-24" style="padding-left:150px">
 
 				<h1 class="tagline">Event Planning. Organizing. and Execution
-					<%= link_to "Sign Out", destroy_user_session_path, class: 'btn btn-default pull-right'%></h1>
+					<%= link_to "Sign Out", destroy_user_session_path, class: 'btn-sm new pull-right'%></h1>
 				<img class="logo img-responsive" src="/assets/logo.jpg" alt="Logo"></img>
 				</div>
 			</div>
