--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,7 +6,7 @@
 		<div class="col-custom-md-3">
 			<div class="left-nav">
 				<ul>
-				<div class="selected"><li><%= link_to "Dash Board", root_path %></li></div>
+				<div class="selected"><li  ><%= link_to "Dashboard", root_path, style:"margin:-14px" %></li></div>
 				<li><a href="#">The EC</a></li>
 				<li><a href="#">About</a></li>
 				<li><a href="#">Contact</a></li>
@@ -25,92 +25,11 @@
 				  <% end %>
 				<% end %>
 			</h2>
-				<div class="some">
-				<div class="header1 fixed" style ="float:left;margin:8px">
-						<table class="table table-striped box-border table-dummy">
-						   <thead class="box-head">
-								  <tr><td colspan="3"><strong>Events <span style="color:#e06d21;">Registered</span></strong></td></tr>
-								  
-							</thead>
-						
-							<tbody>
-							<tr>
-									<td><strong>Title</strong></td>
-									<td><strong>Venue</strong></td>
-									<td><strong>Start Date</strong></td>
-								</tr>
-								<% @events_attended.to_enum.with_index(1) do |event,i |%>
-								<tr>
-									<td><%= event.title %></td>
-									<td><%= event.venue %></td>
-									<td><%= event.event_start_date %></td>
-								</tr>
-								<% break if i==3 %>
-								<% end %>
-						  </tbody>
-						 </table>
-
-				
-
-<table id="events_registered" class="table table-striped box-border table-main display" data-source="/events_registered.json" style="display:none">
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Venue</th>
-      <th>Start Date</th>
-      <th>End Date</th>
-      <th></th>
-    </tr>
-  </thead>
-  <tbody>
-  </tbody>
-</table>
-
-
-
-					</div>
-					<div class="header1 fixed" style ="float:left;margin:8px">
-						<table class="table table-striped box-border table-dummy">
-						   <thead class="box-head">
-							  <tr>
-								<tr><td colspan="3"><strong>Events <span style="color:#e06d21;">Running</span></strong></td></tr>
-							  </tr>
-						   </thead>
-						   <tbody>
-							<tr>
-									<td><strong>Title</strong></td>
-									<td><strong>Venue</strong></td>
-									<td><strong>Start Date</strong></td>
-								</tr>
-								<% @current_events.to_enum.with_index(1) do |event,i |%>
-								<tr>
-									<td><%= event.title %></td>
-									<td><%= event.venue %></td>
-									<td><%= event.event_start_date %></td>
-								</tr>
-								<% break if i==3 %>
-								<% end %>
-						  </tbody>
-						 </table>
-
-
-						<table id="events_running" class="table table-striped box-border table-main display" data-source="/current_events.json" style="display:none">
- 									 <thead>
-   										 <tr>
-    									  <th>Title</th>
-      										<th>Venue</th>
-      										<th>Start Date</th>
-      										<th>End Date</th>
-      										<th></th>
-    										</tr>
-  										</thead>
- 									 <tbody>
-  									</tbody>
-						</table>
-
-
-					</div>
-				</div> <!-- Row closing -->		
+		     <% if @role=="guest"%>
+			<%= render partial: "layouts/dash_board/events_for_guest" %>
+			<% else %>
+			  <%= render partial: "layouts/dash_board/events_for_host" %>
+			  <% end %>
 
 			<div class="clearfix"></div>
 			</div> <!-- Content-section closing -->
