--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -18,8 +18,8 @@
 							<li><a href="/home">THE EC</a></li>
 							<li><%= link_to "ABOUT",about_us_path %></li>
 							<li><a href="/users/sign_up">REGISTER</a></li>
-							<li><a href="#">CONTACT</a></li>
-							<li><a href="#">EVENTS</a></li>
+							<li><%= link_to "CONTACT",contact_us_path %></li>
+							<li><%= link_to "EVENTS",events_path %></li>
 						</ul>
 					</nav>
 				</div>
