--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -58,8 +58,8 @@
 							<li><a href="/home" class="selected">THE EC</a></li>
 							<li><%= link_to "ABOUT",about_us_path %></li>
 				<li><a href="/users/sign_up">REGISTER</a></li>
-							<li><%= link_to "CONTACT",contact_us_path %></li>
-							<li><%= link_to "EVENTS",events_path %></li>
+							<li><%= link_to "CONTACT",'#' %></li>
+							<li><%= link_to "EVENTS", '#' %></li>
 						</ul>
 					</nav>
 				</div>
