add blank pages on home page

--- a/app/views/layouts/_content.html.erb
+++ b/app/views/layouts/_content.html.erb
@@ -9,9 +9,9 @@
 				<div class="col-md-7 col-sm-7">
 				<nav class="middle-nav">
 					<ul>
-						<li><a href="#">Host Event</a></li>
-						<li><a href="#">Attend Event</a></li>
-						<li><a href="#">Sponsor Event</a></li>
+					  <li><%= link_to "Host Event",host_event_path %></li>
+					  <li><%= link_to "Attend Event",attend_event_path %></li>
+					  <li><%= link_to "Sponsor Event",sponsor_event_path %></li>
 					</ul>
 				</nav>
 				</div>
