changed select in register

--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -14,25 +14,25 @@
               <div class="control-group">
                 <label class="control-label" for="inputpagetitle">First Name :</label>
               <div class="controls">
-                <input id="user[first_name]" class="form-control-1" type="text" name="user[first_name]">
+                <input id="user[first_name]" class="form-control" type="text" name="user[first_name]">
              </div>
            </div>
           <div class="control-group">
            <label class="control-label" for="inputlogo">Password :</label>
            <div class="controls">
-            <input id="user[password]" class="form-control-1" type="password" name="user[password]">
+            <input id="user[password]" class="form-control" type="password" name="user[password]">
           </div>
        </div>
        <div class="control-group">
         <label class="control-label" for="inputlogo">Street Address :</label>
 <div class="controls">
-<input id="address[address]" class="form-control-1" type="text" name="address[address]">
+<input id="address[address]" class="form-control" type="text" name="address[address]">
 </div>
 </div>
 <div class="control-group">
 <label class="control-label" for="inputlogo">Zip Code :</label>
 <div class="controls">
-<input id="address[zipcode]" class="form-control-1" type="text" name="address[zipcode]">
+<input id="address[zipcode]" class="form-control" type="text" name="address[zipcode]">
 </div>
 </div>
 
@@ -87,7 +87,7 @@
                 <div class="control-group">
                   <label for="inputlogo" class="control-label">Role:</label>
                   <div class="controls">
-                    <select class="form-control-1" name="role[role_id]">
+                    <select class="form-control" name="role[role_id]">
                       <option value="">Select</option>
                       <option value="host">Host</option>
                       <option value="guest">Guest</option>
@@ -97,7 +97,7 @@
                 <div class="control-group">
                   <label for="inputlogo" class="control-label">State :</label>
                   <div class="controls">
-                    <select class="form-control-1" name="address[state]">
+                    <select class="form-control" name="address[state]">
                       <option value="">Select</option>
                       <option value="Alabama">Alabama</option>
                       <option value="Alaska">Alaska</option>
