--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -45,25 +45,25 @@
             <div class="control-group">
               <label class="control-label" for="inputpagetitle">Last Name :</label>
               <div class="controls">
-                <input type="text" name="user[last_name]" id="user[last_name]" class="form-control-1">
+                <input type="text" name="user[last_name]" id="user[last_name]" class="form-control">
               </div>
             </div>
             <div class="control-group">
               <label class="control-label" for="inputlogo">Verify Password :</label>
                 <div class="controls">
-                  <input type="password" name="user[password_confirmation]" id="user[password_confirmation]" class="form-control-1">
+                  <input type="password" name="user[password_confirmation]" id="user[password_confirmation]" class="form-control">
                 </div>
             </div>
             <div class="control-group">
               <label class="control-label" for="inputlogo">City :</label>
               <div class="controls">
-                <input type="text" name="address[city]" id="address[city]" class="form-control-1">
+                <input type="text" name="address[city]" id="address[city]" class="form-control">
               </div>
             </div>
             <div class="control-group">
               <label class="control-label" for="inputlogo">Phone No :</label>
               <div class="controls">
-                <input type="text" name="address[phone_no]" id="address[phone_no]" class="form-control-1">
+                <input type="text" name="address[phone_no]" id="address[phone_no]" class="form-control">
               </div>
             </div>
             <br/>
@@ -80,7 +80,7 @@
             <div class="control-group">
               <label class="control-label" for="inputlogo">Email :</label>
               <div class="controls">
-                <input type="text" name="user[email]" id="user[email]" class="form-control-1">
+                <input type="text" name="user[email]" id="user[email]" class="form-control">
               </div>
             </div>
    
