Added Create Event Page

--- a/app/assets/stylesheets/home/main.css
+++ b/app/assets/stylesheets/home/main.css
@@ -38,7 +38,8 @@ padding:20px 0 0 0;
 padding:20px 0 20px 20px;
 list-style:none;
 color:#84d4f0;
-font-size:20px;
+font-size:14px;
+font-weight: bold;
 border-bottom:3px solid #00879f;
 margin-right:12px;
 }
