--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,7 +12,7 @@
  *= require jquery.ui.core
  *= require jquery.ui.theme
  *= require dataTables/src/demo_table_jui
- *= require bootstrap_and_overrides
  *= require bootstrap
+ *= require bootstrap-datetimepicker
  *= require home/mainpage/main-index
  */
