--- a/app/views/layouts/dash_board/_sidebar_top.html.erb
+++ b/app/views/layouts/dash_board/_sidebar_top.html.erb
@@ -9,22 +9,23 @@
 				<div class="test <%= 'selected' if params[:action] == 'index'%>"><li><%= link_to "Dashboard", root_path, style:"font-size:18px;"%></li></div>
 
 
-				<% if @role=="guest"%>
+				<% if session[:role]=="guest"%>
+			      <% if current_user.has_role? :host%>
                   <div class="test <%= 'selected' if params[:action] == 'the_ec'%>">
-				    <li><a href="/ec"> HOST EVENT</a></li>
+				    <li><a href="/host_dashboard"> HOST EVENT</a></li>
 			      </div>
+			      <% end %>
 			      <div class="test <%= 'selected' if params[:action] == 'about_us_dashbord'%>">
-				    <li><a href='/about_us_dashbord'>ATTEND EVENT</a></li>
+				    <li><a href='/about_us_dashbord'>FIND EVENT</a></li>
 				  </div>	         
 				 <% else %>
                   <div class="test <%= 'selected' if params[:action] == 'the_ec'%>">
-				    <li><a href="/ec"> ATTEND EVENT</a></li>
+				    <li><a href="/guest_dashboard"> ATTEND EVENT</a></li>
 			      </div>
 			      <div class="test <%= 'selected' if params[:action] == 'new'%>">
 				    <li><a href='/events/new'> CREATE EVENT</a></li>
 				  </div>
              	<% end %>
-		
 				<div class="test <%= 'selected' if params[:action] == 'user_contact'%> ">
 				  <li><a href="/user_contact">CONTACT</a></li>
 		    	</div>
