--- a/app/views/layouts/dash_board/_events_for_guest.html.erb
+++ b/app/views/layouts/dash_board/_events_for_guest.html.erb
@@ -2,7 +2,7 @@
 				<div class="header1 fixed" style ="float:left;margin:8px">
 						<table class="table table-striped box-border table-dummy">
 						   <thead class="box-head">
-								  <tr><td colspan="3"><strong>Events <span style="color:#e06d21;">Attended</span></strong></td></tr>
+								  <tr><td colspan="4"><strong>Events <span style="color:#e06d21;">Attended</span></strong></td></tr>
 								  
 							</thead>
 						
@@ -11,12 +11,14 @@
 									<td><strong>Title</strong></td>
 									<td><strong>Venue</strong></td>
 									<td><strong>Start Date</strong></td>
+									<td><strong>Registered Users</strong></td>									
 								</tr>
 								<% @events_attended.each do |event| %>
 								<tr>
 									<td><%= event.title %></td>
-									<td><%= event.venue %></td>
+									<td><%= "#{event.address.city} #{event.address.state}" if event.address %></td>
 									<td><%= event.event_start_date.strftime("%b %d,%Y") %></td>
+									<td><%= event.registered_users.count %></td>								
 								</tr>
 								<% end %>
 						  </tbody>
@@ -24,19 +26,21 @@
 
 				
 
-<table id="events_registered" class="table table-striped box-border table-main display" data-source="/events_attended.json" style="display:none">
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Venue</th>
-      <th>Start Date</th>
-      <th>End Date</th>
-      <th></th>
-    </tr>
-  </thead>
-  <tbody>
-  </tbody>
-</table>
+
+						<table id="events_running" class="table table-striped box-border table-main display" data-source="/events_attended.json" style="display:none">
+ 									 <thead>
+   										 <tr>
+    									  <th>Title</th>
+      										<th>Start Date</th>
+      										<th>Start Time</th>
+      										<th>Registered Users</th>
+      										<th></th>
+    										</tr>
+  										</thead>
+ 									 <tbody>
+  									</tbody>
+
+                         </table>
 
 
 
@@ -45,7 +49,7 @@
 						<table class="table table-striped box-border table-dummy">
 						   <thead class="box-head">
 							  <tr>
-								<tr><td colspan="3"><strong>Current <span style="color:#e06d21;">Events</span></strong></td></tr>
+								<tr><td colspan="4"><strong>Current <span style="color:#e06d21;">Events</span></strong></td></tr>
 							  </tr>
 						   </thead>
 						   <tbody>
@@ -53,12 +57,14 @@
 									<td><strong>Title</strong></td>
 									<td><strong>Venue</strong></td>
 									<td><strong>Start Date</strong></td>
+									<td><strong>Registered Users</strong></td>									
 								</tr>
 								<% @current_events.each do |event|%>
 								<tr>
 									<td><%= event.title %></td>
-									<td><%= event.venue %></td>
+									<td><%= "#{event.address.city} #{event.address.state}" if event.address %></td>
 									<td><%= event.event_start_date.strftime("%b %d,%Y") %></td>
+									<td><%= event.registered_users.count %></td>								
 								</tr>
 								<% end %>
 						  </tbody>
@@ -69,9 +75,9 @@
  									 <thead>
    										 <tr>
     									  <th>Title</th>
-      										<th>Venue</th>
       										<th>Start Date</th>
-      										<th>End Date</th>
+      										<th>Start Time</th>
+      										<th>Registered Users</th>
       										<th></th>
     										</tr>
   										</thead>
@@ -87,7 +93,7 @@
 				<div class="header1 fixed" style ="float:left;margin:8px">
 						<table class="table table-striped box-border table-dummy">
 						   <thead class="box-head">
-								  <tr><td colspan="3"><strong>Events <span style="color:#e06d21;">Registered</span></strong></td></tr>
+								  <tr><td colspan="4"><strong>Events <span style="color:#e06d21;">Registered</span></strong></td></tr>
 								  
 							</thead>
 						
@@ -96,12 +102,14 @@
 									<td><strong>Title</strong></td>
 									<td><strong>Venue</strong></td>
 									<td><strong>Start Date</strong></td>
+									<td><strong>Registered Users</strong></td>									
 								</tr>
 								<% @events_registered.each do |event|%>
 								<tr>
 									<td><%= event.title %></td>
-									<td><%= event.venue %></td>
+									<td><%= "#{event.address.city} #{event.address.state}" if event.address %></td>
 									<td><%= event.event_start_date.strftime("%b %d,%Y") %></td>
+									<td><%= event.registered_users.count %></td>								
 								</tr>
 								<% end %>
 						  </tbody>
@@ -109,18 +117,20 @@
 
 				
 
-<table id="events_registered" class="table table-striped box-border table-main display" data-source="/events_registered.json" style="display:none">
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Venue</th>
-      <th>Start Date</th>
-      <th>End Date</th>
-      <th></th>
-    </tr>
-  </thead>
-  <tbody>
-  </tbody>
-</table>
-	</div>
-</div><!-- row closing -->
+						<table id="events_running" class="table table-striped box-border table-main display" data-source="/events_registered.json" style="display:none">
+ 									 <thead>
+   										 <tr>
+    									  <th>Title</th>
+      										<th>Start Date</th>
+      										<th>Start Time</th>
+      										<th>Registered Users</th>
+      										<th></th>
+    										</tr>
+  										</thead>
+ 									 <tbody>
+  									</tbody>
+						</table>
+
+
+					</div>
+				</div> <!-- Row closing -->		
