--- a/app/views/layouts/dash_board/_events_for_host.html.erb
+++ b/app/views/layouts/dash_board/_events_for_host.html.erb
@@ -2,7 +2,7 @@
 				<div class="header1 fixed" style ="float:left;margin:8px">
 						<table class="table table-striped box-border table-dummy">
 						   <thead class="box-head">
-								  <tr><td colspan="3"><strong>Hosted <span style="color:#e06d21;">Events</span></strong></td></tr>
+								  <tr><td colspan="4"><strong>Hosted <span style="color:#e06d21;">Events</span></strong></td></tr>
 								  
 							</thead>
 						
@@ -11,12 +11,16 @@
 									<td><strong>Title</strong></td>
 									<td><strong>Venue</strong></td>
 									<td><strong>Start Date</strong></td>
+									<td><strong>Registered Users</strong></td>
+
 								</tr>
 								<% @events_hosted.each do |event|%>
 								<tr>
 									<td><%= event.title %></td>
-									<td><%= event.venue %></td>
+									<td><%= "#{event.address.city} #{event.address.state}" if event.address %></td>
 									<td><%= event.event_start_date.strftime("%b %d,%Y") %></td>
+									<td><%= event.registered_users.count %></td>
+
 								</tr>
 								<% end %>
 						  </tbody>
@@ -24,19 +28,19 @@
 
 				
 
-<table id="events_registered" class="table table-striped box-border table-main display" data-source="/events_hosted.json" style="display:none">
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Venue</th>
-      <th>Start Date</th>
-      <th>End Date</th>
-      <th></th>
-    </tr>
-  </thead>
-  <tbody>
-  </tbody>
-</table>
+						<table id="events_running" class="table table-striped box-border table-main display" data-source="/events_hosted.json" style="display:none">
+ 									 <thead>
+   										 <tr>
+    									  <th>Title</th>
+      										<th>Start Date</th>
+      										<th>Start Time</th>
+      										<th>Registered Users</th>
+      										<th></th>
+    										</tr>
+  										</thead>
+ 									 <tbody>
+  									</tbody>
+						</table>
 
 
 
@@ -45,7 +49,7 @@
 						<table class="table table-striped box-border table-dummy">
 						   <thead class="box-head">
 							  <tr>
-								<tr><td colspan="3"><strong>Current <span style="color:#e06d21;">Events</span></strong></td></tr>
+								<tr><td colspan="4"><strong>Current <span style="color:#e06d21;">Events</span></strong></td></tr>
 							  </tr>
 						   </thead>
 						   <tbody>
@@ -53,12 +57,14 @@
 									<td><strong>Title</strong></td>
 									<td><strong>Venue</strong></td>
 									<td><strong>Start Date</strong></td>
+									<td><strong>Registered Users</strong></td>									
 								</tr>
 								<% @host_current_events.each do |event|%>
 								<tr>
 									<td><%= event.title %></td>
-									<td><%= event.venue %></td>
+									<td><%= "#{event.address.city} #{event.address.state}" if event.address %></td>
 									<td><%= event.event_start_date.strftime("%b %d,%Y") %></td>
+									<td><%= event.registered_users.count %></td>							
 								</tr>
 								<% end %>
 						  </tbody>
@@ -69,9 +75,9 @@
  									 <thead>
    										 <tr>
     									  <th>Title</th>
-      										<th>Venue</th>
       										<th>Start Date</th>
-      										<th>End Date</th>
+      										<th>Start Time</th>
+      										<th>Registered Users</th>
       										<th></th>
     										</tr>
   										</thead>
@@ -89,7 +95,7 @@
 						<table class="table table-striped box-border table-dummy">
 						   <thead class="box-head">
 							  <tr>
-								<tr><td colspan="3"><strong>Upcoming <span style="color:#e06d21;">Events</span></strong></td></tr>
+								<tr><td colspan="4"><strong>Upcoming <span style="color:#e06d21;">Events</span></strong></td></tr>
 							  </tr>
 						   </thead>
 						   <tbody>
@@ -97,12 +103,14 @@
 									<td><strong>Title</strong></td>
 									<td><strong>Venue</strong></td>
 									<td><strong>Start Date</strong></td>
+									<td><strong>Registered Users</strong></td>									
 								</tr>
 								<% @upcoming_events.each do |event|%>
 								<tr>
 									<td><%= event.title %></td>
-									<td><%= event.venue %></td>
+									<td><%= "#{event.address.city} #{event.address.state}" if event.address %></td>
 									<td><%= event.event_start_date.strftime("%b %d,%Y") %></td>
+									<td><%= event.registered_users.count %></td>
 								</tr>
 								<% end %>
 						  </tbody>
@@ -113,9 +121,9 @@
  									 <thead>
    										 <tr>
     									  <th>Title</th>
-      										<th>Venue</th>
       										<th>Start Date</th>
-      										<th>End Date</th>
+      										<th>Start Time</th>
+      										<th>Registered Users</th>
       										<th></th>
     										</tr>
   										</thead>
@@ -129,7 +137,7 @@
 						<table class="table table-striped box-border table-dummy">
 						   <thead class="box-head">
 							  <tr>
-								<tr><td colspan="3"><strong>Saved <span style="color:#e06d21;">Events</span></strong></td></tr>
+								<tr><td colspan="4"><strong>Saved <span style="color:#e06d21;">Events</span></strong></td></tr>
 							  </tr>
 						   </thead>
 						   <tbody>
@@ -137,12 +145,14 @@
 									<td><strong>Title</strong></td>
 									<td><strong>Venue</strong></td>
 									<td><strong>Start Date</strong></td>
+									<td><strong>Registered Users</strong></td>									
 								</tr>
 								<% @saved_events.each do |event|%>
 								<tr>
 									<td><%= event.title %></td>
-									<td><%= event.venue %></td>
+									<td><%= "#{event.address.city} #{event.address.state}" if event.address %></td>
 									<td><%= event.event_start_date.strftime("%b %d,%Y") %></td>
+									<td><%= event.registered_users.count %></td>								
 								</tr>
 								<% end %>
 						  </tbody>
@@ -150,12 +160,12 @@
 
 
 						<table id="events_running" class="table table-striped box-border table-main display" data-source="/saved_events.json" style="display:none">
- 									 <thead>
+ 									  <thead>
    										 <tr>
     									  <th>Title</th>
-      										<th>Venue</th>
       										<th>Start Date</th>
-      										<th>End Date</th>
+      										<th>Start Time</th>
+      										<th>Venue</th>
       										<th></th>
     										</tr>
   										</thead>
